--- a/demo/tts_onnx_demo.ipynb
+++ b/demo/tts_onnx_demo.ipynb
@@ -53,7 +53,7 @@
     "!pip install -U espnet_onnx espnet espnet_model_zoo onnx\n",
     "\n",
     "# in this demo, we need to update scipy to avoid an error\n",
-    "!pip install -U scipy"
+    "!pip install -U scipy numpy==1.23.5 pyworld==0.3.2"
    ]
   },
   {
