Fixed onnx version

--- a/demo/tts_onnx_demo.ipynb
+++ b/demo/tts_onnx_demo.ipynb
@@ -25,6 +25,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,7 +36,7 @@
     "- torch >= 1.11.0 (already installed in Colab)\n",
     "- espnet\n",
     "- espnet_model_zoo\n",
-    "- onnx\n",
+    "- onnx == 1.14\n",
     "\n",
     "`torch`, `espnet`, `espnet_model_zoo`, `onnx` is required to run the exportation demo."
    ]
@@ -50,10 +51,10 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -U espnet_onnx espnet espnet_model_zoo onnx\n",
+    "!pip install -U espnet_onnx espnet espnet_model_zoo\n",
     "\n",
     "# in this demo, we need to update scipy to avoid an error\n",
-    "!pip install -U scipy numpy==1.23.5 pyworld==0.3.2"
+    "!pip install -U scipy numpy==1.23.5 pyworld==0.3.2  onnx==1.14"
    ]
   },
   {
